--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<object classid="clsid:CA8A9780-280D-11CF-A24D-444553540000" width="800" height="1050" border="0">
-    <param name="_Version" value="65539">
-    <param name="_ExtentX" value="20108">
-    <param name="_ExtentY" value="10866">
-    <param name="_StockProps" value="0">
-    <param name="SRC" value="1.pdf">
-    <object data="1.pdf" type="application/pdf" width="800" height="1200">  alt : <a href="1.pdf">test.pdf</a>
-    </object>
-</object>
+<!DOCTYPE html>
+<html style="width:100%;height:100%;margin:0px;padding:0px;overflow:hidden;background-color:#E6E6E6;">
+	<head>
+     <title>智能机器人（前沿版）报告.pdf</title>
+	</head>   
+	<body style="width:100%;height:100%;margin:0px;padding:0px;-ms-content-zooming:none;">    
+	<embed width="100%" height="100%" src="1.pdf" type="application/pdf" style="margin:0px;padding:0px;overflow:hidden;display:block;">  
+	</body>
+</html>
