--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html style="width:100%;height:100%;margin:0px;padding:0px;overflow:hidden;background-color:#E6E6E6;">
 	<head>
-     <title>智能机器人（前沿版）报告.pdf</title>
+     <title>Smart Robot Report.pdf</title>
 	</head>   
 	<body style="width:100%;height:100%;margin:0px;padding:0px;-ms-content-zooming:none;">    
-	<embed width="100%" height="100%" src="1.pdf" type="application/pdf" style="margin:0px;padding:0px;overflow:hidden;display:block;">  
+	<embed width="100%" height="100%" src="Smart Robot Report.pdf" type="application/pdf" style="margin:0px;padding:0px;overflow:hidden;display:block;">  
 	</body>
 </html>
