--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html style="width:100%;height:100%;margin:0px;padding:0px;overflow:hidden;background-color:#E6E6E6;">
-	<head>
-     <title>Smart Robot Report.pdf</title>
-	</head>   
-	<body style="width:100%;height:100%;margin:0px;padding:0px;-ms-content-zooming:none;">    
-	<embed width="100%" height="100%" src="Smart Robot Report.pdf" type="application/pdf" style="margin:0px;padding:0px;overflow:hidden;display:block;">  
-	</body>
+<head>
+    <title>Smart Robot Report</title>
+    <meta charset="utf-8" />
+    <script type="text/javascript" src='pdfobject.min.js'></script>
+    <style type="text/css">
+        html,body,#pdf_viewer{
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+</head>
+<body>
+    <div id="pdf_viewer"></div>
+</body>
+<script type="text/javascript">
+    if(PDFObject.supportsPDFs){
+        // PDF嵌入到网页
+        PDFObject.embed("Smart Robot Report.pdf", "#pdf_viewer" );
+    } else {
+        location.href = "/canvas";
+    }
+</script>
 </html>
