--- a/index.html
+++ b/index.html
@@ -1,27 +1,11 @@
-<!DOCTYPE html>
-<html style="width:100%;height:100%;margin:0px;padding:0px;overflow:hidden;background-color:#E6E6E6;">
-<head>
-    <title>Smart Robot Report</title>
-    <meta charset="utf-8" />
-    <script type="text/javascript" src='pdfobject.min.js'></script>
-    <style type="text/css">
-        html,body,#pdf_viewer{
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
-    </style>
-</head>
-<body>
-    <div id="pdf_viewer"></div>
-</body>
-<script type="text/javascript">
-    if(PDFObject.supportsPDFs){
-        // PDF嵌入到网页
-        PDFObject.embed("Smart Robot Report.pdf", "#pdf_viewer" );
-    } else {
-        location.href = "/canvas";
-    }
-</script>
-</html>
+<object classid="clsid:CA8A9780-280D-11CF-A24D-444553540000" width="100%" height="100%" border="0">
+<param name="_Version" value="65539">
+<param name="_ExtentX" value="20108">
+<param name="_ExtentY" value="10866">
+<param name="_StockProps" value="0">
+<param name="SRC" value="Smart Robot Report.pdf">
+<object data="Smart Robot Report.pdf" type="application/pdf" width="100%" height="100%">  
+Download : <a href="Smart Robot Report.pdf">Smart Robot Report.pdf</a>
+</object>
+</object>
+
